--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ mypy = "^0.782"
 black = {version = "^19.10b0", allow-prereleases = true}
 
 [tool.poetry.scripts]
-heatfile = "heatfile.console:run"
+heatfile = "heatfile.console:main"
 
 [build-system]
 requires = ["poetry>=0.12"]
