--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,13 @@ keywords = ["heatfile", "file_scan", "tree"]
 python = "^3.7"
 click = "^7.1.2"
 click-help-colors = "^0.8"
+colorama = "^0.4.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+pytest-cov = "^2.8.1"
+pytest-mock = "^3.3.1"
+coverage = {extras = ["toml"], version = "^5.0.1"}
 flake8 = "^3.8.3"
 flake8-black = "^0.2.1"
 flake8-import-order = "^0.18.1"
@@ -27,10 +31,20 @@ pre-commit = "^2.7.1"
 nox = "^2020.8.22"
 pytype = {version = "^2020.8.17", python = "3.7"}
 typeguard = "^2.9.1"
-pytest-mock = "^3.3.1"
 
 [tool.poetry.scripts]
 heatfile = "heatfile.console:main"
+
+[tool.coverage.paths]
+source = ["src", "*/site-packages"]
+
+[tool.coverage.run]
+branch = true
+source = ["heatfile"]
+
+[tool.coverage.report]
+show_missing = true
+fail_under = 100
 
 [build-system]
 requires = ["poetry>=0.12"]
